fixed overflow for sub menu

--- a/primo-explore/custom/01USNH_UNH-MAIN/css/custom-scss-compiled.css
+++ b/primo-explore/custom/01USNH_UNH-MAIN/css/custom-scss-compiled.css
@@ -956,7 +956,11 @@ search-bar-sub-menu div.layout-align-end-center.layout-row.flex.search-bar-sub-m
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 36px; }
+  height: 36px;
+  overflow-x: scroll;
+  /* Hide horizontal scrollbar */
+  overflow-y: hidden;
+  /* Add vertical scrollbar */ }
 
 search-bar-sub-menu .md-button.md-small {
   font-size: 0.75em;
