--- a/primo-explore/custom/01USNH_UNH-MAIN/scss/partials/_search-bar-sub-menu.scss
+++ b/primo-explore/custom/01USNH_UNH-MAIN/scss/partials/_search-bar-sub-menu.scss
@@ -40,6 +40,8 @@ search-bar-sub-menu div.layout-align-end-center.layout-row.flex.search-bar-sub-m
   left: 0;
   width: 100%;
   height: 36px;
+  overflow-x: scroll; /* Hide horizontal scrollbar */
+  overflow-y: hidden; /* Add vertical scrollbar */
 }
 
 search-bar-sub-menu .md-button.md-small {
